--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A NodeJs deamon that syncronize data between firebase and postgres",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "NODE_ENV=development node index.js",
+    "debug": "NODE_ENV=development node --inspect-brk=0.0.0.0:9229 index.js",
+    "test": "NODE_ENV=testing NODE_PATH=src ./node_modules/.bin/mocha -w test",
+    "coverage": "NODE_ENV=testing NODE_PATH=src istanbul cover _mocha -- test"
   },
   "repository": {
     "type": "git",
@@ -30,6 +33,8 @@
     "sinon-chai": "^3.3.0"
   },
   "dependencies": {
+    "app-module-path": "^2.2.0",
+    "firebase": "^7.2.3",
     "log4js": "^5.3.0"
   }
 }
