--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=development node index.js",
     "debug": "NODE_ENV=development node --inspect-brk=0.0.0.0:9229 index.js",
-    "test": "NODE_ENV=testing NODE_PATH=src ./node_modules/.bin/mocha -w test",
-    "coverage": "NODE_ENV=testing NODE_PATH=src istanbul cover _mocha -- test"
+    "test": "NODE_ENV=testing NODE_PATH=src jest --watch",
+    "coverage": "NODE_ENV=testing NODE_PATH=src jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,7 @@
   },
   "homepage": "https://github.com/rebelstackio/synd#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0"
+    "jest": "^24.9.0"
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
