--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "homepage": "https://github.com/rebelstackio/synd#readme",
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jest-extended": "^0.11.2"
   },
   "dependencies": {
+    "@sentry/node": "^5.7.1",
     "app-module-path": "^2.2.0",
     "firebase": "^7.2.3",
     "log4js": "^5.3.0"
